--- a/waagreen/src/main/resources/templates/home.html
+++ b/waagreen/src/main/resources/templates/home.html
@@ -3,17 +3,26 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
+<link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
 </head>
 <body>
-faculty page 
 <nav class="navbar is-dark">
 	<div class="container">
 	<div class="navbar-brand">
-		<a class="navbar-item" href="https://bulma.io">
-			<img src="https://bulma.io/images/bulma-logo-white.png" alt="Bulma: a modern CSS framework based on Flexbox" width="112" height="28">
+		<a class="navbar-item" href="admin/admin"> 
+			<h1>ADMIN</h1>	
 		</a>
 	</div>
-
+<div class="navbar-brand">
+		<a class="navbar-item" href="/faculty/faculty"> 
+		<h1>FACULTY</h1>
+			</a>
+	</div>
+	<div class="navbar-brand">
+		<a class="navbar-item" href="student/student"> 
+		<h1>STUDENT</h1>
+			</a>
+	</div>
 	<div class="navbar-menu">
 		<div class="navbar-end">
 			
@@ -21,50 +30,8 @@ faculty page
 	</div>
 	</div>
 </nav>
-<div class="admin container">
+<br>
 
-<table class="table is-fullwidth is-hoverable">
-  <thead>
-    <tr>
-      <th> ID </th>
-      <th> NAME</th>
-      <th> EMAIL ADDRESS</th>
-      <th> EXAM</th>
-      <th> STATUS</th>
-      <th>SEND RESULT</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor='let stuinfo of studentinfo;let idn=index'>
-      <td>{{idn+1}}</td>
-      <td>{{stuinfo.name}}</td>
-      <td class="has-text-weight-bold">{{stuinfo.email}}</td>
-      <td>
-        <button class="button is-link" type="submit" (click)='[sendinvitation(stuinfo.email,stuinfo.status)]'>Invite</button>
-      </td>
-      <div *ngIf=""></div>
-      <td class="has-text-weight-bold">{{stuinfo.status}}</td>
-      <td>
-        <p appIsdisabled [result]='stuinfo.status'><button class="button is-success" type="submit" (click)='[sendemail(stuinfo.email,stuinfo.status)]'>Send
-          </button></p>
 
-      </td>
-    </tr>
-  </tbody>
-  <tfoot>
-    <tr>
-      <th> ID </th>
-      <th> NAME</th>
-      <th> EMAIL ADDRESS</th>
-      <th> EXAM</th>
-      <th> STATUS</th>
-      <th>SEND RESULT</th>
-    </tr>
-  </tfoot>
-</table>
-</div>
-<form action="/login" method="get">
-<input type="submit" value="Add Employee">
-</form>
 </body>
 </html>
