--- a/waagreen/src/main/resources/templates/faculty/Faculty.html
+++ b/waagreen/src/main/resources/templates/faculty/Faculty.html
@@ -39,9 +39,10 @@
 <label th:text="BLOCK">BLOCK:</label>
 <select id="blockid" name="block">
 <option  th:each="bl : ${block}" th:text="${bl.startDate}" >hjjh</option> 
+
 </select>
 <label>COURSE:</label><select id="courseid"  name="course">
-<option  th:each= "cr : ${course}" th:text="${cr.courseName}">WAA </option></select>
+<option  th:each= "cr : ${course}" th:text="${cr.courseName}" th:value="${cr.id}">WAA </option></select>
 <input type="submit" class="button is-link" value="Report" id="mybtn" />
 </form>
 <table class="table is-fullwidth is-hoverable" id="result">
