--- a/waagreen/src/main/resources/templates/faculty/facultyreport.html
+++ b/waagreen/src/main/resources/templates/faculty/facultyreport.html
@@ -1,40 +1,72 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
+ <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
+  
+ 
 </head>
 <body>
+
+<nav class="navbar is-dark">
+	<div class="container">
+	<div class="navbar-brand">
+		<a class="navbar-item" href="https://bulma.io"> 
+			<h1>ADMIN</h1>	
+		</a>
+	</div>
+<div class="navbar-brand">
+		<a class="navbar-item" href="https://bulma.io"> 
+		<h1>FACULTY</h1>
+			</a>
+	</div>
+	<div class="navbar-brand">
+		<a class="navbar-item" href="https://bulma.io"> 
+		<h1>STUDENT</h1>
+			</a>
+	</div>
+	<div class="navbar-menu">
+		<div class="navbar-end">
+			
+		</div>
+	</div>
+	</div>
+</nav>
+<br>
+<div class="admin container">
+
 <table class="table is-fullwidth is-hoverable" id="result">
-  <thead>
     <tr>
-      <th> ID </th>
+    
       <th> NAME</th>
-      <th> EMAIL ADDRESS</th>
+    
       <th> MEDITATION DAYS</th>
       <th> MEDITATION PERCENTAGE</th>
       <th>EXTRA POINTS</th>
     </tr>
-  </thead>
-  <tbody>
- <tr th:each="attend : ${report}">
-      	<td th:text="${attend.student.firstName}">1</td>
-        <td th:text="${attend.student.lastName}">001</td>
-        <td th:text="${attend.attendanceDate}">Name</td>
-        <td th:text="${attend.attendanceType.types}">City</td>
-        <td th:text="">Country</td>
+ 
+ <tr th:each="attend : ${result}">
+ 
+      	<td th:text="${attend.student.firstName} +' '+${attend.student.lastName}">name</td>
+        <td th:text="${attend.attendanceDate}">date</td>
+       
+        <td th:text="${attend.present}">persent</td>
+        <td  th:text="${attend.present}">extra point</td>
       </tr>
-      </tbody>
+     
   <tfoot>
     <tr>
-      <th> ID </th>
+    
       <th> NAME</th>
-      <th> EMAIL ADDRESS</th>
+     
       <th> MEDITATION DAYS</th>
       <th> MEDITATION PERCENTAGE</th>
       <th>EXTRA POINTS</th>
     </tr>
   </tfoot>
 </table>
+<script type="text/javascript" src="/js/faculty.js"  ></script>
 </body>
+
 </html>
