--- a/waagreen/src/main/resources/templates/home.html
+++ b/waagreen/src/main/resources/templates/home.html
@@ -1,34 +1,34 @@
- <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-<link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
+    <meta charset="ISO-8859-1">
+    <title>Insert title here</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
 </head>
 <body>
 <nav class="navbar is-dark">
-	<div class="container">
-	<div class="navbar-brand">
-		<a class="navbar-item" href="admin/admin"> 
-			<h1>ADMIN</h1>	
-		</a>
-	</div>
-<div class="navbar-brand">
-		<a class="navbar-item" href="/faculty/faculty"> 
-		<h1>FACULTY</h1>
-			</a>
-	</div>
-	<div class="navbar-brand">
-		<a class="navbar-item" href="student/student"> 
-		<h1>STUDENT</h1>
-			</a>
-	</div>
-	<div class="navbar-menu">
-		<div class="navbar-end">
-			
-		</div>
-	</div>
-	</div>
+    <div class="container">
+        <div class="navbar-brand">
+            <a class="navbar-item" href="admin/admin">
+                <h1>ADMIN</h1>
+            </a>
+        </div>
+        <div class="navbar-brand">
+            <a class="navbar-item" href="/faculty/faculty">
+                <h1>FACULTY</h1>
+            </a>
+        </div>
+        <div class="navbar-brand">
+            <a class="navbar-item" href="student/student">
+                <h1>STUDENT</h1>
+            </a>
+        </div>
+        <div class="navbar-menu">
+            <div class="navbar-end">
+
+            </div>
+        </div>
+    </div>
 </nav>
 <br>
 
