--- a/waagreen/src/main/resources/templates/home.html
+++ b/waagreen/src/main/resources/templates/home.html
@@ -19,6 +19,11 @@
 			</a>
 	</div>
 	<div class="navbar-brand">
+		<a class="navbar-item" href="/faculty/facultyreportrest"> 
+		<h1>FACULTY</h1>
+			</a>
+	</div>
+	<div class="navbar-brand">
 		<a class="navbar-item" href="student/student"> 
 		<h1>STUDENT</h1>
 			</a>
