--- a/waagreen/src/main/resources/templates/faculty/facultyreport.html
+++ b/waagreen/src/main/resources/templates/faculty/facultyreport.html
@@ -4,14 +4,15 @@
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
  <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
-
+<script type="text/javascript" src="/js/jquery-3.3.1.js" th:src="@{/js/jquery-3.3.1.js}"  ></script>
+<script type="text/javascript" src="/js/faculty.js" th:src="@{/js/faculty.js}"  ></script>
  
 </head>
 <body>
 <form>
 <input type="button" value="Ajax call" id="mybtn" >
 </form>
-  <script type="text/javascript" src="/js/faculty.js"  ></script>
+  
 </body>
 
 </html>
