--- a/waagreen/src/main/resources/templates/student/Student.html
+++ b/waagreen/src/main/resources/templates/student/Student.html
@@ -4,16 +4,16 @@
     <meta charset="ISO-8859-1">
     <title>Computer ProfessionalS Program </title>
     <link href="css/main.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
     <link rel="stylesheet" th:href="@{/css/main.css}" href="../css/main.css" />
     <script type="text/javascript"
             th:href="@{/js/student.js}"></script>
 </head>
 <body>
-
 <div class="admin container">
-   Total sessions possible:  <p th:text="${result.possibledays}">hjghj</p>
- Total sessions attended:<p th:text="${result.daysattended}">hgklj</p>
- percentage<p th:text="${result.per}">khvglkhvj</p>
+ Total sessions possible:   <div th:text="${result.possibledays}">   Total sessions possible:</div>
+ Total sessions attended:<div th:text="${result.daysattended}"> Total sessions attended:</div>
+ percentage<div th:text="${result.per}"> percentage</div>
  
 <table class="table is-fullwidth is-hoverable" id="result">
     <tr>
@@ -35,5 +35,6 @@
   </tfoot>
 </table>
 </div>
+
 </body>
 </html>
