--- a/waagreen/src/main/resources/templates/faculty/Faculty.html
+++ b/waagreen/src/main/resources/templates/faculty/Faculty.html
@@ -11,17 +11,18 @@
 <nav class="navbar is-dark">
 	<div class="container">
 	<div class="navbar-brand">
-		<a class="navbar-item" href="https://bulma.io"> 
+		<a class="navbar-item" href="admin/admin"> 
 			<h1>ADMIN</h1>	
 		</a>
 	</div>
-<div class="navbar-brand">
-		<a class="navbar-item" href="https://bulma.io"> 
+	<div class="navbar-brand">
+		<a class="navbar-item" href="/faculty/faculty"> 
 		<h1>FACULTY</h1>
 			</a>
 	</div>
+	
 	<div class="navbar-brand">
-		<a class="navbar-item" href="https://bulma.io"> 
+		<a class="navbar-item" href="student/student"> 
 		<h1>STUDENT</h1>
 			</a>
 	</div>
@@ -31,6 +32,8 @@
 		</div>
 	</div>
 	</div>
+   
+    
 </nav>
 <br>
 <div class="admin container">
