--- a/waagreen/src/main/resources/templates/faculty/facultyreport.html
+++ b/waagreen/src/main/resources/templates/faculty/facultyreport.html
@@ -9,6 +9,33 @@
  
 </head>
 <body>
+<nav class="navbar is-dark">
+	<div class="container">
+	<div class="navbar-brand">
+		<a class="navbar-item" href="admin/admin"> 
+			<h1>ADMIN</h1>	
+		</a>
+	</div>
+	<div class="navbar-brand">
+		<a class="navbar-item" href="/faculty/faculty"> 
+		<h1>FACULTY</h1>
+			</a>
+	</div>
+	
+	<div class="navbar-brand">
+		<a class="navbar-item" href="student/student"> 
+		<h1>STUDENT</h1>
+			</a>
+	</div>
+	<div class="navbar-menu">
+		<div class="navbar-end">
+			
+		</div>
+	</div>
+	</div>
+   
+    
+</nav>
 <form>
 <input type="button" value="Ajax call" id="mybtn" >
 </form>
