--- a/waagreen/src/main/resources/templates/student/Student.html
+++ b/waagreen/src/main/resources/templates/student/Student.html
@@ -10,6 +10,33 @@
             th:href="@{/js/student.js}"></script>
 </head>
 <body>
+<nav class="navbar is-dark">
+	<div class="container">
+	<div class="navbar-brand">
+		<a class="navbar-item" href="admin/admin"> 
+			<h1>ADMIN</h1>	
+		</a>
+	</div>
+	<div class="navbar-brand">
+		<a class="navbar-item" href="/faculty/faculty"> 
+		<h1>FACULTY</h1>
+			</a>
+	</div>
+	
+	<div class="navbar-brand">
+		<a class="navbar-item" href="student/student"> 
+		<h1>STUDENT</h1>
+			</a>
+	</div>
+	<div class="navbar-menu">
+		<div class="navbar-end">
+			
+		</div>
+	</div>
+	</div>
+   
+    
+</nav>
 <div class="admin container">
  Total sessions possible:   <div th:text="${result.possibledays}">   Total sessions possible:</div>
  Total sessions attended:<div th:text="${result.daysattended}"> Total sessions attended:</div>
