--- a/waagreen/src/main/resources/templates/student/StudentDetails.html
+++ b/waagreen/src/main/resources/templates/student/StudentDetails.html
@@ -7,6 +7,33 @@
     <link rel="stylesheet" th:href="@{/css/main.css}" href="../css/main.css"/>
 </head>
 <body>
+<nav class="navbar is-dark">
+	<div class="container">
+	<div class="navbar-brand">
+		<a class="navbar-item" href="admin/admin"> 
+			<h1>ADMIN</h1>	
+		</a>
+	</div>
+	<div class="navbar-brand">
+		<a class="navbar-item" href="/faculty/faculty"> 
+		<h1>FACULTY</h1>
+			</a>
+	</div>
+	
+	<div class="navbar-brand">
+		<a class="navbar-item" href="student/student"> 
+		<h1>STUDENT</h1>
+			</a>
+	</div>
+	<div class="navbar-menu">
+		<div class="navbar-end">
+			
+		</div>
+	</div>
+	</div>
+   
+    
+</nav>
 <div id="global">
     <h4>The student Accumulative information</h4>
 
