--- a/waagreen/src/main/resources/templates/Admin/generateReportByEntry.html
+++ b/waagreen/src/main/resources/templates/Admin/generateReportByEntry.html
@@ -11,31 +11,29 @@
 <body>
 
 <nav class="navbar is-dark">
-	<div class="container">
-	<div class="navbar-brand">
-		<a class="navbar-item" href="admin/admin"> 
-			<h1>ADMIN</h1>	
-		</a>
-	</div>
-	<div class="navbar-brand">
-		<a class="navbar-item" href="/faculty/faculty"> 
-		<h1>FACULTY</h1>
-			</a>
-	</div>
-	
-	<div class="navbar-brand">
-		<a class="navbar-item" href="student/student"> 
-		<h1>STUDENT</h1>
-			</a>
-	</div>
-	<div class="navbar-menu">
-		<div class="navbar-end">
-			
-		</div>
-	</div>
-	</div>
-   
-    
+    <div class="container">
+        <div class="navbar-brand">
+            <a class="navbar-item" href="admin/admin">
+                <h1>ADMIN</h1>
+            </a>
+        </div>
+        <div class="navbar-brand">
+            <a class="navbar-item" href="/faculty/faculty">
+                <h1>FACULTY</h1>
+            </a>
+        </div>
+
+        <div class="navbar-brand">
+            <a class="navbar-item" href="student/student">
+                <h1>STUDENT</h1>
+            </a>
+        </div>
+        <div class="navbar-menu">
+            <div class="navbar-end">
+
+            </div>
+        </div>
+    </div>
 </nav>
 <br>
 <div class="admin container">
@@ -60,9 +58,9 @@
         </thead>
         <tr th:each="attendd : ${percentdata}">
             <td th:text="${attendd.student.code.studentId} ">Id</td>
-            <td th:text="${attendd.student.email">Email</td>
-            <td th:text="${attendd.possibledays}">Total Session Possible </td>
-            <td th:text="${attendd.meditationdays}">Total Sesion Attended </td>
+            <td th:text="${attendd.student.email}">Email</td>
+            <td th:text="${attendd.possibledays}">Total Session Possible</td>
+            <td th:text="${attendd.meditationdays}">Total Sesion Attended</td>
             <td th:text="${attendd.percentage}">Percent Attended</td>
         </tr>
         <tbody>
