--- a/waagreen/src/main/resources/templates/Admin/generateReportByEntry.html
+++ b/waagreen/src/main/resources/templates/Admin/generateReportByEntry.html
@@ -49,9 +49,9 @@
     <table class="table is-fullwidth is-hoverable" id="result">
         <thead>
         <tr>
-            <th> Id</th>
-            <th> Email</th>
-            <th> Total Sessions Possible</th>
+            <th>Id</th>
+            <th>Email</th>
+            <th>otal Sessions Possible</th>
             <th>Total Sessions Attended</th>
             <th>Percent Attendance</th>
         </tr>
