--- a/waagreen/src/main/resources/templates/student/Student.html
+++ b/waagreen/src/main/resources/templates/student/Student.html
@@ -7,43 +7,40 @@
     <title>Computer ProfessionalS Program </title>
     <link href="css/main.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
-    <!--<link rel="stylesheet" th:href="@{/css/main.css}" href="../css/main.css" />-->
+    <link rel="stylesheet" th:href="@{/css/main.css}" href="../css/main.css" />
     <script type="text/javascript"
             th:href="@{/js/student.js}"></script>
 </head>
 <body>
 <div layout:fragment="main-content">
-<div >
+<div class="box">
     Total sessions possible:
     <div th:text="${result.possibledays}"> Total sessions possible:</div>
     Total sessions attended:
     <div th:text="${result.daysattended}"> Total sessions attended:</div>
     percentage
     <div th:text="${result.per}"> percentage</div>
+</div>
+    <div class="admin container">
 
+        <table class="table is-fullwidth is-hoverable" id="result">
+            <tr>
 
+                <th> Date</th>
 
-    <td class="table" id="result">
-        <tr>
+                <th> Present</th>
 
-            <th> Date</th>
+            </tr>
 
-            <th>Present</th>
+                    <tr th:each="data : ${result.dateofmed}">
 
-            <td th:each="data : ${blockReportDatas}"/>
-          //  <td th:text="${data.date}" />
-            <td th:text = "${blockReportDatas.contains(result.dateofmed)}"/>
-
-        </tr>
-
-
-    </td>
-    <!--<td th:text="${data.present}">True</td>-->
-    <!--<td th:if="${result.dateofmed}"</td>-->
-    <!--<td th:text="${data.date}">NAME</td>-->
+    <td th:text="${data}" ></td>
+    <td th:text ="${result.available}"></td>
 
         </tr>
 
+
+</table>
 
 </div>
 </div>
