--- a/waagreen/src/main/resources/templates/student/StudentDetails.html
+++ b/waagreen/src/main/resources/templates/student/StudentDetails.html
@@ -7,14 +7,17 @@
     <link rel="stylesheet" th:href="@{/css/home.css}" href="../css/home.css"/>
 </head>
 <body>
-<div class="container">
+
+<div class="box" id="center-panel-grid">
     <div class="navbar-brand">
         <a class="navbar-item" href="https://bulma.io">
 
-            <h4>The student Accumulative information</h4>
+            <h4><strong>>>>>>>>The student Accumulative information<<<<<<<<</strong></h4>
         </a>
 
-
+    </div>
+</div>
+        <div>
         <div class="dropdown">
             <form th:action="@{/student/studentDetails}" method="get">
                 <select class="blue-margin" name="block">
@@ -22,11 +25,13 @@
                     <option th:each="block : ${blockList}" th:value="${block.block}"
                             th:text="${block.block}"></option>
                 </select>
-                <input class="button" th:type="submit" th:value="Submit"/>
+
+
+                <input class=" table is-fullwidth is-hoverable" th:type="submit" th:value="Submit"/>
             </form>
 
         </div>
     </div>
-</div>
+
 </body>
 </html>
