--- a/waagreen/src/main/resources/templates/access-denied.html
+++ b/waagreen/src/main/resources/templates/access-denied.html
@@ -9,8 +9,8 @@
     <script type="text/javascript"
             th:href="@{/js/student.js}"></script>
 </head>
-<img alt="" src="https://farm5.staticflickr.com/4134/4883152280_7e42346d12_b.jpg">
+<img alt="" src="https://farm5.staticflickr.com/4134/4883152280_7e42346d12_b.jpg" height="100" width="200">
 <br>
-<a href="http://localhost:8080/home"> <button type="button" value="HOME PAGE" class="button is-link"> </button></a>
+<a href="http://localhost:8080/home"> <input type="button" value="HOME PAGE" class="button is-link"> </button></a>
 <body>
 </body></html>
