--- a/waagreen/src/main/resources/templates/faculty/Faculty.html
+++ b/waagreen/src/main/resources/templates/faculty/Faculty.html
@@ -1,17 +1,20 @@
- <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en" xmlns:layout="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      layout:decorate="~{layouts/layout}">
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
  <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
+<script type="text/javascript" src="/js/jquery-3.3.1.js" th:src="@{/js/jquery-3.3.1.js}"  ></script>
+<script type="text/javascript" src="/js/faculty.js" th:src="@{/js/faculty.js}"  ></script>
  
 </head>
 <body>
-
 <nav class="navbar is-dark">
 	<div class="container">
 	<div class="navbar-brand">
-		<a class="navbar-item" href="admin/admin"> 
+		<a class="navbar-item" href="/admin/admin"> 
 			<h1>ADMIN</h1>	
 		</a>
 	</div>
@@ -22,58 +25,39 @@
 	</div>
 	
 	<div class="navbar-brand">
-		<a class="navbar-item" href="student/student"> 
+		<a class="navbar-item" href="/student/student"> 
 		<h1>STUDENT</h1>
 			</a>
 	</div>
-	<div class="navbar-menu">
-		<div class="navbar-end">
-			
-		</div>
+	<div class="navbar-brand">
+		<a class="navbar-item" href="/admin/attendance"> 
+		<h1>ATTENDANCE</h1>
+			</a>
 	</div>
 	</div>
    
     
 </nav>
+<div layout:fragment="main-content">
 <br>
 <div class="admin container">
-<form th:action="@{/faculty/facultyreport}" th:method="GET" >
-<label th:text="BLOCK">BLOCK:</label>
-<select id="blockid" name="block">
-<option  th:each="bl : ${block}" th:text="${bl.block}" >hjjh</option> 
+<form  >
+<select id="blockid" name="block" class="select">
+<option value=0>Select Block</option>
+<option  th:each="bl : ${block}" th:text="${bl.block}" th:value="${bl.block}" >hjjh</option> 
 
 </select>
-<label>COURSE:</label><select id="courseid"  name="course">
+<label></label><select id="courseid"  name="course" class="select">
+<option value=0>Select Course</option>
 <option  th:each= "cr : ${course}" th:text="${cr.courseName}" th:value="${cr.id}">WAA </option></select>
-<input type="submit" class="button is-link" value="Report" />
+<input type="button" class="button is-link" value="Report" id="mybtn" />
 </form>
-<div class="admin container">
-
 <table class="table is-fullwidth is-hoverable" id="result">
-    <tr>
     
-      <th> NAME</th>
-    
-      <th> MEDITATION DAYS</th>
-      <th> MEDITATION PERCENTAGE</th>
-      <th>EXTRA POINTS</th>
-    </tr>
- 
-  <tr th:each="attendd : ${percentdata}">
-       	<td th:text="${attendd.student.firstName} ">NAME</td>
-        <td th:text="${attendd.meditationdays}">MEDITATION DAYS</td>
-               <td th:text="${attendd.percentage}"> MEDITATION PERCENTAGE</td>
-        <td  th:text="${attendd.extrapoint}">EXTRA POINTS</td>
-      </tr>
-     
-  <tfoot>
-  
-  </tfoot>
 </table>
 </div>
-
-
-
+<form>
+</form>
+  </div>
 </body>
-
 </html>
