--- a/waagreen/src/main/resources/templates/faculty/facultyreport.html
+++ b/waagreen/src/main/resources/templates/faculty/facultyreport.html
@@ -1,5 +1,7 @@
- <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en" xmlns:layout="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      layout:decorate="~{layouts/layout}">
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
@@ -9,37 +11,12 @@
  
 </head>
 <body>
-<nav class="navbar is-dark">
-	<div class="container">
-	<div class="navbar-brand">
-		<a class="navbar-item" href="admin/admin"> 
-			<h1>ADMIN</h1>	
-		</a>
-	</div>
-	<div class="navbar-brand">
-		<a class="navbar-item" href="/faculty/faculty"> 
-		<h1>FACULTY</h1>
-			</a>
-	</div>
-	
-	<div class="navbar-brand">
-		<a class="navbar-item" href="student/student"> 
-		<h1>STUDENT</h1>
-			</a>
-	</div>
-	<div class="navbar-menu">
-		<div class="navbar-end">
-			
-		</div>
-	</div>
-	</div>
-   
-    
-</nav>
+<div layout:fragment="main-content">
+
 <form>
 <input type="button" value="Ajax call" id="mybtn" >
 </form>
-  
+  </div>
 </body>
 
 </html>
