--- a/waagreen/src/main/resources/templates/fragments/nav.html
+++ b/waagreen/src/main/resources/templates/fragments/nav.html
@@ -4,26 +4,33 @@
 </head>
 <body>
 <nav class="navbar is-dark" role="navigation" th:fragment="nav">
-    <div class="container">
-        <div class="navbar-brand has-navbar-fixed-top">
-            <a class="navbar-item" href="https://bulma.io">
-                <img src="https://bulma.io/images/bulma-logo.png"
-                     alt="Bulma: Free, open source, & modern CSS framework based on Flexbox" width="112" height="28">
-            </a>
-
-            <a class="navbar-item" href="admin/admin">
-                <h1>ADMIN</h1>
-            </a>
-
-            <a class="navbar-item" href="/faculty/faculty">
-                <h1>FACULTY</h1>
-            </a>
-
-            <a class="navbar-item" href="student/student">
-                <h1>STUDENT</h1>
-            </a>
-        </div>
-    </div>
+    <nav class="navbar is-dark">
+	<div class="container">
+	<div class="navbar-brand">
+		<a class="navbar-item" href="http://localhost:8080/admin/admin"> 
+			<h1>ADMIN</h1>	
+		</a>
+	</div>
+	<div class="navbar-brand">
+		<a class="navbar-item" href="http://localhost:8080/faculty/faculty"> 
+		<h1>FACULTY</h1>
+			</a>
+	</div>
+	
+	<div class="navbar-brand">
+		<a class="navbar-item" href="http://localhost:8080/student/student"> 
+		<h1>STUDENT</h1>
+			</a>
+	</div>
+	<div class="navbar-menu">
+		<div class="navbar-end">
+			
+		</div>
+	</div>
+	</div>
+   
+    
+</nav>
 </nav>
 </body>
 </html>
