--- a/waagreen/src/main/resources/templates/home.html
+++ b/waagreen/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
 <nav class="navbar is-dark">
 	<div class="container">
 	<div class="navbar-brand">
-		<a class="navbar-item" href="admin/admin"> 
+		<a class="navbar-item" href="/admin/admin"> 
 			<h1>ADMIN</h1>	
 		</a>
 	</div>
@@ -20,14 +20,14 @@
 	</div>
 	
 	<div class="navbar-brand">
-		<a class="navbar-item" href="student/student"> 
+		<a class="navbar-item" href="/student/student"> 
 		<h1>STUDENT</h1>
 			</a>
 	</div>
-	<div class="navbar-menu">
-		<div class="navbar-end">
-			
-		</div>
+	<div class="navbar-brand">
+		<a class="navbar-item" href="/admin/attendance"> 
+		<h1>ATTENDANCE</h1>
+			</a>
 	</div>
 	</div>
    
