--- a/waagreen/src/main/resources/templates/layouts/layout.html
+++ b/waagreen/src/main/resources/templates/layouts/layout.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" th:href="@{/css/bulmastyle.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/customstyle.css}"/>
+     <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
+<script type="text/javascript" src="/js/jquery-3.3.1.js" th:src="@{/js/jquery-3.3.1.js}"  ></script>
+<script type="text/javascript" src="/js/faculty.js" th:src="@{/js/faculty.js}"  ></script>
+ 
     <title layout:title-pattern=" $CONTENT_TITLE - $LAYOUT_TITLE">MUM</title>
 </head>
 <body class="d-flex flex-column h-100" cz-shortcut-listen="true">
