--- a/waagreen/src/main/resources/templates/login.html
+++ b/waagreen/src/main/resources/templates/login.html
@@ -14,14 +14,14 @@
 
 <div class="container">
      <form th:action="@{/login}" method="POST" class="form-signin">
-        <h3 class="form-signin-heading" th:text="Welcome"></h3>
+        <h3 class="form-signin-heading" ></h3>
         <br/>
 
         <input type="text" id="email" name="email" th:placeholder="Email"
                class="form-control"/> <br/>
         <input type="password" th:placeholder="Password"
                id="password" name="password" class="form-control"/> <br/>
-
+<input type='checkbox' name="remember-me"/>Remember Me? <br/>
         <div align="center" th:if="${param.error}">
             <p style="font-size: 20; color: #FF1C19;">Email or Password invalid, please verify</p>
         </div>
